# muse2csv

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
examples/: convert.py
muse2csv/: __init__.py  converter.py
